tests/ui/cfg/cfg-eval-derive-invalid-reparse-no-ice.stderr
error: expected expression, found `ty` metavariable
  --> $DIR/cfg-eval-derive-invalid-reparse-no-ice.rs:8:25
   |
LL |         pub enum TokenKind {
   |                  --------- while parsing this enum
LL |             #[cfg(test)]
LL |             STRING([u8; $inner]),
   |                         ^^^^^^ expected expression
...
LL | values!(String);
   | --------------- in this macro invocation
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`
   = note: this error originates in the macro `values` (in Nightly builds, run with -Z macro-backtrace for more info)

error: macro expansion ignores `)` and any tokens following
  --> $DIR/cfg-eval-derive-invalid-reparse-no-ice.rs:8:32
   |
LL |             STRING([u8; $inner]),
   |                                ^
...
LL | values!(String);
   | --------------- caused by the macro expansion here
   |
   = note: the usage of `values!` is likely invalid in item context

error: aborting due to 2 previous errors

